test/static/wrong/module2.kk.out
test/static/wrong/module2.kk(2, 3): error: could not find module: static/doesNotExist
 search path: C:/Users/daan/dev/koka/lib,lib,test